Continue with the corrections of chapter 3 plus advancing in chapter 4

--- a/Tesis.bib
+++ b/Tesis.bib
@@ -232,3 +232,31 @@
   publisher={AIP}
 }
 
+
+@article{hosseini2016airborne,
+  title={Airborne contaminant source estimation using a finite-volume forward solver coupled with a Bayesian inversion approach},
+  author={Hosseini, Bamdad and Stockie, John M},
+  journal={arXiv preprint arXiv:1607.03518},
+  year={2016}
+}
+
+
+@article{monin1954basic,
+  title={Basic laws of turbulent mixing in the surface layer of the atmosphere},
+  author={Monin, AS and Obukhov, AMF},
+  journal={Contrib. Geophys. Inst. Acad. Sci. USSR},
+  volume={151},
+  number={163},
+  pages={e187},
+  year={1954}
+}
+
+
+
+@book{logan2014applied,
+  title={Applied partial differential equations},
+  author={Logan, J David},
+  year={2014},
+  publisher={Springer}
+}
+
